--- a/Nutrition & Health Survey – Age Prediction Challenge/EDA.ipynb
+++ b/Nutrition & Health Survey – Age Prediction Challenge/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 550,
    "id": "4030a9de",
    "metadata": {},
    "outputs": [],
@@ -14,18 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 551,
    "id": "a652888a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test=pd.read_csv('./data/Test_Data.csv')\n",
-    "train=pd.read_csv('./data/Train_Data.csv')"
+    "test=pd.read_csv('Test_Data.csv')\n",
+    "train=pd.read_csv('Train_Data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 552,
    "id": "176fc63f",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
        "4     Adult  "
       ]
      },
-     "execution_count": 289,
+     "execution_count": 552,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 553,
    "id": "0a0944c6",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 554,
    "id": "2908609f",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
        "19               77.0           8.02     Adult    Male  "
       ]
      },
-     "execution_count": 291,
+     "execution_count": 554,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 555,
    "id": "bfe976ed",
    "metadata": {},
    "outputs": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 556,
    "id": "e51fb840",
    "metadata": {},
    "outputs": [
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 557,
    "id": "d2d56c31",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
        "18"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 557,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 558,
    "id": "81abe0c3",
    "metadata": {},
    "outputs": [
@@ -620,7 +620,7 @@
        "14"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 558,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 559,
    "id": "763b7966",
    "metadata": {},
    "outputs": [
@@ -847,7 +847,7 @@
        "[1966 rows x 10 columns]"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 559,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 560,
    "id": "c52c799b",
    "metadata": {},
    "outputs": [
@@ -873,7 +873,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 560,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 561,
    "id": "93a2055b",
    "metadata": {},
    "outputs": [
@@ -1007,7 +1007,7 @@
        "4  2.0               81.0          10.92     Adult  "
       ]
      },
-     "execution_count": 298,
+     "execution_count": 561,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 562,
    "id": "b58dea0c",
    "metadata": {},
    "outputs": [
@@ -1043,7 +1043,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 562,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 563,
    "id": "3489b829",
    "metadata": {},
    "outputs": [
@@ -1074,7 +1074,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 563,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 564,
    "id": "44cf24ac",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1301,7 @@
        "[134 rows x 10 columns]"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 564,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 565,
    "id": "4158b7f9",
    "metadata": {},
    "outputs": [
@@ -1326,7 +1326,7 @@
        "Name: Body Mass Index, dtype: float64"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 565,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 566,
    "id": "f4974b44",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1368,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 567,
+   "id": "10cb3774",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Sequence number', 'Gender', 'Body Mass Index', 'RIDAGEYR', 'PAQR',\n",
+       "       'Glucose level', 'DQR', 'Glucose tolerance', 'Insulin level',\n",
+       "       'age_group'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 567,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 568,
    "id": "aef93747",
    "metadata": {},
    "outputs": [],
@@ -1377,7 +1401,7 @@
     "# numeric: median\n",
     "# categorical: mode\n",
     "\n",
-    "for col in ['Body Mass Index', 'Glucose level', 'Glucose tolerance', 'Insulin level']:\n",
+    "for col in ['Body Mass Index', 'Glucose level', 'Glucose tolerance', 'Insulin level', 'RIDAGEYR']:\n",
     "    train[col] = train[col].fillna(train[col].median())\n",
     "for col in ['Gender', 'PAQR', 'DQR']:\n",
     "    train[col] = train[col].fillna(train[col].mode()[0])\n"
@@ -1385,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 569,
    "id": "18410508",
    "metadata": {},
    "outputs": [],
@@ -1397,22 +1421,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": null,
    "id": "4713ac58",
    "metadata": {},
    "outputs": [],
    "source": [
-    "features=['Body Mass Index','Glucose level', 'Glucose tolerance', 'Insulin level']"
+    "features=['Body Mass Index','Glucose level', 'Glucose tolerance', 'Insulin level','RIDAGEYR']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 571,
    "id": "f48c4d92",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# outlier analysis\n",
+    "# outlier handling\n",
     "# upper and lower bound\n",
     "\n",
     "outlier_bounds = {}\n",
@@ -1432,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 572,
    "id": "4e48683c",
    "metadata": {},
    "outputs": [],
@@ -1442,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 573,
    "id": "b3828b3a",
    "metadata": {},
    "outputs": [],
@@ -1454,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 574,
    "id": "4ee0f201",
    "metadata": {},
    "outputs": [
@@ -1462,7 +1486,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Accuracy: 82.10%\n"
+      "Validation Accuracy: 100.00%\n"
      ]
     }
    ],
@@ -1472,7 +1496,7 @@
     "y = train['age_group']\n",
     "\n",
     "X_train, X_val, y_train, y_val = train_test_split(\n",
-    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+    "    X, y, test_size=0.1, stratify=y\n",
     ")\n",
     "\n",
     "\n",
@@ -1487,14 +1511,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 575,
    "id": "59f21713",
    "metadata": {},
    "outputs": [],
    "source": [
     "# handling nan in test\n",
     "\n",
-    "for col in ['Body Mass Index', 'Glucose level', 'Glucose tolerance', 'Insulin level']:\n",
+    "for col in ['Body Mass Index', 'Glucose level', 'Glucose tolerance', 'Insulin level', 'RIDAGEYR']:\n",
     "    test[col] = test[col].fillna(train[col].median())\n",
     "for col in ['Gender', 'PAQR', 'DQR']:\n",
     "    test[col] = test[col].fillna(train[col].mode()[0])\n"
@@ -1502,12 +1526,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 576,
    "id": "14481b50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# outlier in test\n",
+    "# outlier handling in test\n",
     "\n",
     "for col in features:\n",
     "\n",
@@ -1517,32 +1541,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 578,
    "id": "842f429f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [],
    "source": [
-    "features=['Body Mass Index','Glucose level', 'Glucose tolerance', 'Insulin level']\n",
-    "\n",
     "X_test = test[features]\n",
     "\n",
     "y_pred = model.predict(X_test)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 314,
-   "id": "32d3365c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "submission = pd.DataFrame({\n",
     "    'age_group': y_pred\n",
     "})\n",
-    "\n",
-    "submission.to_csv('submission.csv', index=False)\n",
-    "\n"
+    "submission.to_csv('submission.csv', index=False)"
    ]
   }
  ],
